--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "mongoose": "^6.2.2"
+    "mongoose": "^6.2.2",
+    "nodemon": "^2.0.15"
   }
 }
