--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DB_CONNECTION=mongodb+srv://HM10:Neymar10.brasil@cluster0.kwaxo.mongodb.net/TutoMania?retryWrites=true&w=majority
+DB_CONNECTION= mongodb+srv://HM10:Neymar10.brasil@cluster0.kwaxo.mongodb.net/TutoMania?retryWrites=true&w=majority
 PORT=5000
