added routes and controllers for Users + validation + check package json for installed npm

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DB_CONNECTION= mongodb+srv://HM10:Neymar10.brasil@cluster0.kwaxo.mongodb.net/TutoMania?retryWrites=true&w=majority
+TOKEN_SECRET = skjhfdjsdhfkkjwerudemy
 PORT=5000
