--- a/backend/package.json
+++ b/backend/package.json
@@ -17,8 +17,10 @@
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "stripe": "^8.207.0",
     "uuid": "^8.3.2"
   }
 }
