--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "payment": "^2.4.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.8",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
