--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 DB_CONNECTION= mongodb+srv://HM10:Neymar10.brasil@cluster0.kwaxo.mongodb.net/TutoMania?retryWrites=true&w=majority
-TOKEN_SECRET = skjhfdjsdhfkkjwerudemy
+TOKEN_SECRET = skjhfdjsdhfkkjwertutomania
 PORT=5000
