--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.26.0",
+    "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
+    "dotenv": "^16.0.0",
+    "params": "^0.1.1",
     "payment": "^2.4.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
