--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "jquery": "^3.6.0",
     "params": "^0.1.1",
     "payment": "^2.4.6",
     "react": "^17.0.2",
