--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "payment": "^2.4.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
+    "react-client-session": "^0.0.8",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-final-form": "^6.5.8",
     "react-hook-form": "^7.27.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
